include/decentdb.h

typedef uint32_t ddb_status_t;
typedef struct ddb_db_handle ddb_db_t;
typedef struct ddb_result_handle ddb_result_t;
typedef struct ddb_stmt_handle ddb_stmt_t;
typedef struct ddb_value_t {
  uint32_t tag;
  uint8_t bool_value;
  uint8_t reserved0[7];
  int64_t int64_value;
  double float64_value;
  int64_t decimal_scaled;
  uint8_t decimal_scale;
  uint8_t reserved1[7];
  uint8_t *data;
  size_t len;
  uint8_t uuid_bytes[16];
  int64_t timestamp_micros;
  uint64_t enum_type_id;
  uint64_t enum_label_id;
  uint8_t ip_family;
  uint8_t cidr_prefix_len;
  uint8_t reserved2[6];
  uint8_t ip_cidr_addr_bytes[16];
  int32_t date_days;
  int64_t time_micros;
  int64_t timestamptz_micros;
  int32_t interval_months;
  int32_t interval_days;
  int64_t interval_micros;
} ddb_value_t;
typedef struct ddb_value_view_t {
  uint32_t tag;
  uint8_t bool_value;
  uint8_t reserved0[7];
  int64_t int64_value;
  double float64_value;
  int64_t decimal_scaled;
  uint8_t decimal_scale;
  uint8_t reserved1[7];
  const uint8_t *data;
  size_t len;
  uint8_t uuid_bytes[16];
  int64_t timestamp_micros;
  uint64_t enum_type_id;
  uint64_t enum_label_id;
  uint8_t ip_family;
  uint8_t cidr_prefix_len;
  uint8_t reserved2[6];
  uint8_t ip_cidr_addr_bytes[16];
  int32_t date_days;
  int64_t time_micros;
  int64_t timestamptz_micros;
  int32_t interval_months;
  int32_t interval_days;
  int64_t interval_micros;
} ddb_value_view_t;
/*
 * On success, ownership of the returned database handle transfers to the caller.
 * Call ddb_db_free exactly once for each successful create/open/open_or_create call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_db_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_create(const char *path, ddb_db_t **out_db);
ddb_status_t ddb_db_open(const char *path, ddb_db_t **out_db);
/*
 * On success, ownership of the returned statement handle transfers to the caller.
 * Call ddb_stmt_free exactly once for each successful ddb_db_prepare call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_stmt_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_prepare(ddb_db_t *db, const char *sql, ddb_stmt_t **out_stmt);
ddb_status_t ddb_stmt_bind_null(ddb_stmt_t *stmt, size_t index_1_based);
ddb_status_t ddb_stmt_bind_int64(ddb_stmt_t *stmt, size_t index_1_based, int64_t value);
ddb_status_t ddb_stmt_bind_int64_step_row_view(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    int64_t value,
    const ddb_value_view_t **out_values,
    size_t *out_columns,
    uint8_t *out_has_row);
ddb_status_t ddb_stmt_bind_int64_step_i64_text_f64(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    int64_t value,
    int64_t *out_int64,
    const uint8_t **out_text_data,
    size_t *out_text_len,
    double *out_float64,
    uint8_t *out_has_row);
ddb_status_t ddb_stmt_bind_float64(ddb_stmt_t *stmt, size_t index_1_based, double value);
ddb_status_t ddb_stmt_bind_bool(ddb_stmt_t *stmt, size_t index_1_based, uint8_t value);
ddb_status_t ddb_stmt_bind_text(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    const char *value,
    size_t byte_len);
ddb_status_t ddb_stmt_bind_blob(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    const uint8_t *data,
    size_t byte_len);
ddb_status_t ddb_stmt_bind_decimal(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    int64_t scaled,
    uint8_t scale);
ddb_status_t ddb_stmt_bind_timestamp_micros(
    ddb_stmt_t *stmt,
    size_t index_1_based,
    int64_t timestamp_micros);
ddb_status_t ddb_stmt_execute_batch_i64(
    ddb_stmt_t *stmt,
    size_t row_count,
    const int64_t *values_i64,
    uint64_t *out_total_affected_rows);
ddb_status_t ddb_stmt_execute_batch_i64_text_f64(
    ddb_stmt_t *stmt,
    size_t row_count,
    const int64_t *values_i64,
    const char *const *values_text_ptrs,
    const size_t *values_text_lens,
    const double *values_f64,
    uint64_t *out_total_affected_rows);
ddb_status_t ddb_stmt_execute_batch_typed(
    ddb_stmt_t *stmt,
    size_t row_count,
    const char *signature,
    const int64_t *values_i64,
    const double *values_f64,
    const char *const *values_text_ptrs,
    const size_t *values_text_lens,
    uint64_t *out_total_affected_rows);
ddb_status_t ddb_stmt_rebind_int64_execute(
    ddb_stmt_t *stmt,
    int64_t value,
    uint64_t *out_affected);
ddb_status_t ddb_stmt_rebind_text_int64_execute(
    ddb_stmt_t *stmt,
    const char *text_value,
    size_t text_len,
    int64_t int_value,
    uint64_t *out_affected);
ddb_status_t ddb_stmt_rebind_int64_text_execute(
    ddb_stmt_t *stmt,
    int64_t int_value,
    const char *text_value,
    size_t text_len,
    uint64_t *out_affected);
ddb_status_t ddb_stmt_step_row_view(
    ddb_stmt_t *stmt,
    const ddb_value_view_t **out_values,
    size_t *out_columns,
    uint8_t *out_has_row);
ddb_status_t ddb_stmt_fetch_row_views(
    ddb_stmt_t *stmt,
    uint8_t include_current_row,
    size_t max_rows,
    const ddb_value_view_t **out_values,
    size_t *out_rows,
    size_t *out_columns);
/*
 * On success, ownership of the returned result handle transfers to the caller.
 * Call ddb_result_free exactly once for each successful ddb_db_execute call.
 * The handle retains references to internal database state; failing to free it leaks that state
 * until process exit.
 * Do not call ddb_result_free concurrently from multiple threads on the same handle.
 */
ddb_status_t ddb_db_execute(
    ddb_db_t *db,
    const char *sql,
    const ddb_value_t *params,
    size_t params_len,
    ddb_result_t **out_result);
ddb_status_t ddb_db_describe_table_json(ddb_db_t *db, const char *name, char **out_json);
ddb_status_t ddb_db_get_table_ddl(ddb_db_t *db, const char *name, char **out_ddl);
ddb_status_t ddb_db_get_view_ddl(ddb_db_t *db, const char *name, char **out_ddl);