bindings/dotnet/src/DecentDB.Native/NativeMethods.cs


    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_prepare")]
    internal static extern uint ddb_db_prepare(IntPtr db, byte* sqlUtf8, out IntPtr outStmt);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_null")]
    internal static extern uint ddb_stmt_bind_null(IntPtr stmt, nuint index1Based);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_int64")]
    internal static extern uint ddb_stmt_bind_int64(IntPtr stmt, nuint index1Based, long value);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_bool")]
    internal static extern uint ddb_stmt_bind_bool(IntPtr stmt, nuint index1Based, byte value);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_decimal")]
    internal static extern uint ddb_stmt_bind_decimal(IntPtr stmt, nuint index1Based, long scaled, byte scale);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_float64")]
    internal static extern uint ddb_stmt_bind_float64(IntPtr stmt, nuint index1Based, double value);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_text")]
    internal static extern uint ddb_stmt_bind_text(IntPtr stmt, nuint index1Based, byte* utf8, nuint byteLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_blob")]
    internal static extern uint ddb_stmt_bind_blob(IntPtr stmt, nuint index1Based, byte* data, nuint byteLen);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_timestamp_micros")]
    internal static extern uint ddb_stmt_bind_timestamp_micros(IntPtr stmt, nuint index1Based, long timestampMicros);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_describe_table_json")]
    internal static extern uint ddb_db_describe_table_json(IntPtr db, byte* tableNameUtf8, out IntPtr outJson);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_open")]
    internal static extern uint ddb_db_open(byte* pathUtf8, out IntPtr outDb);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_create")]
    internal static extern uint ddb_db_create(byte* pathUtf8, out IntPtr outDb);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_execute")]
    internal static extern uint ddb_db_execute(IntPtr db, byte* sqlUtf8, out IntPtr outResult);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_get_table_ddl")]
    internal static extern uint ddb_db_get_table_ddl(IntPtr db, byte* tableNameUtf8, out IntPtr outDdl);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_db_get_view_ddl")]
    internal static extern uint ddb_db_get_view_ddl(IntPtr db, byte* viewNameUtf8, out IntPtr outDdl);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_int64_step_row_view")]
    internal static extern uint ddb_stmt_bind_int64_step_row_view(IntPtr stmt, nuint index1Based, long value,
        out IntPtr outValues, out nuint outCount, out byte outHasRow);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_bind_int64_step_i64_text_f64")]
    internal static extern uint ddb_stmt_bind_int64_step_i64_text_f64(IntPtr stmt, nuint index1Based, long value,
        out long outInt, out IntPtr outTextPtr, out nuint outTextLen, out double outFloat, out nuint outCount, out byte outHasRow);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_step_row_view")]
    internal static extern uint ddb_stmt_step_row_view(IntPtr stmt, out IntPtr outValues, out nuint outCount, out byte outHasRow);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_fetch_row_views")]
    internal static extern uint ddb_stmt_fetch_row_views(IntPtr stmt, byte includeCurrentRow, nuint maxRows,
        out IntPtr outValues, out nuint outRows, out nuint outColumns);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_execute_batch_i64")]
    internal static extern uint ddb_stmt_execute_batch_i64(IntPtr stmt, nuint count, long* values, out ulong outAffected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_execute_batch_i64_text_f64")]
    internal static extern uint ddb_stmt_execute_batch_i64_text_f64(IntPtr stmt, nuint count,
        long* ids, byte** texts, nuint* textLens, double* floats, out ulong outAffected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_execute_batch_typed")]
    internal static extern uint ddb_stmt_execute_batch_typed(IntPtr stmt, byte* signatureUtf8, nuint count, out ulong outAffected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_rebind_int64_execute")]
    internal static extern uint ddb_stmt_rebind_int64_execute(IntPtr stmt, long value, out ulong outAffected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_rebind_text_int64_execute")]
    internal static extern uint ddb_stmt_rebind_text_int64_execute(IntPtr stmt, byte* text, nuint textLen, long intValue, out ulong outAffected);

    [DllImport(NativeLib, CallingConvention = CallingConvention.Cdecl, EntryPoint = "ddb_stmt_rebind_int64_text_execute")]
    internal static extern uint ddb_stmt_rebind_int64_text_execute(IntPtr stmt, long intValue, byte* text, nuint textLen, out ulong outAffected);
}

internal enum DdbValueTag : uint
{
    Null = 0,
    Int64 = 1,
    Float64 = 2,
    Bool = 3,
    Text = 4,
    Blob = 5,
    Decimal = 6,
    Uuid = 7,
    TimestampMicros = 8
}

[StructLayout(LayoutKind.Sequential)]
internal unsafe struct DdbValueNative
{
    public uint tag;
    public byte bool_value;
    public fixed byte reserved0[7];
    public long int64_value;
    public double float64_value;
    public long decimal_scaled;
    public byte decimal_scale;
    public fixed byte reserved1[7];
    public byte* data;
    public nuint len;
    public fixed byte uuid_bytes[16];
    public long timestamp_micros;
}

[StructLayout(LayoutKind.Sequential)]
public struct DecentdbValueView
{
    public int kind;
    public int is_null;
    public long int64_val;
    public double float64_val;
    public IntPtr bytes;
    public int bytes_len;
    public int decimal_scale;
}

public enum DbValueKind : int
{
    Null = 0,
    Int64 = 1,
    Bool = 2,
    Float64 = 3,
    Text = 4,
    Blob = 5,
    Decimal = 12,
    Timestamp = 17
}
